# CL_ML

./: M23-20221118.txt  Makefile-mingw64  cl_kernel_names.h  cl_kernels.h  extract_weights.py  imagenet1000_classes.cpp  io.cpp  main.cpp  main.h  names_resnet18.h  runtime.h
prev/: Makefile-termux  OpenCL_wrap.cpp  OpenCL_wrap.h  ac.cpp  cl_kernels.h  io.cpp  main.cpp  main.h  readme.txt  runtime.cpp
scripts/: Makefile  lossless.py  pyentropy.c  pyentropy_setup.py  transform12.py  transform14.py  transform15.py  truenet.py
scripts/v02-truenet/: model15.py
scripts/v04-entropy/: codec05.py  codec12.py  entropybattle.py
scripts/v05-experiment4/: codec28.py  codec33.py  codec35.py  experiment4-2023-04-05.py  experiment4.py
scripts/v06-experiment5/: codec37.py  experiment5.py
scripts/v07-predictor/: pred01.py  pred02.py  pred03.py  pred03_cheat.py  pred04.py  pred05.py  pred06.py  sandbox.py  train.py
scripts/v08-lossless/: codec01.py  codec02.py  codec03.py  codec04.py  codec05.py  codec06.py  codec07.py  codec08.py  codec09.py  codec10.py  codec10_02.py  codec11.py  codec12.py  codec13.py  codec14.py  codec15.py  codec16.py  codec17.py  (+7 more)
src/: acme_stdio.h  array.c  array.h  buffer.h  cl_kernel_names.h  cl_kernels.h  cpu.h  error.c  error.h  file.c  file.h  gl_shader.h  glml.c  glml.h  main.c  model.h  ocl_wrap.c  ocl_wrap.h  ocl_wrap_func.h  shader_build.bat  util.c  util.h  vkml.c  vkml.h
ubench/: CMakeLists.txt  kernels.h  test_avx.c  test_avx512.c  test_cl.c  test_scalar_f16p16.c  test_scalar_fp32.c  test_scalar_fp64.c  test_sse2.c  ubench.c  ubench.h
(+4 files in other folders)
